# RabbitMonitor2

./: .editorconfig  .prettierrc.json  Cargo.toml  README.md  install.sh
.github/workflows/: build.yml
src/: main.rs  utils.rs
src/monitor/: battery.rs  components.rs  docker.rs  energy.rs  memory.rs  mod.rs  network.rs  processes.rs  processor.rs  settings.rs  storage.rs  swap.rs  system_info.rs  ups.rs
