[package]
name = "rabbitmonitor"
version = "10.1.0"
authors = ["Rabbit Company LLC <info@rabbit-company.com>"]
description = "Simple server monitor"
edition = "2021"
repository = "https://github.com/Rabbit-Company/RabbitMonitor2"
license = "GPL-3.0"
readme = "README.md"
rust-version = "1.86"
categories = ["command-line-utilities"]
keywords = ["cli", "process-monitoring"]
publish = ["rabbitmonitor"]

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1.46", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
sysinfo = "0.36.1"
starship-battery = "0.10"
chrono = "0.4"
